swap pag completed

--- a/liquidity-pool-admin.html
+++ b/liquidity-pool-admin.html
@@ -114,8 +114,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <img src="img/nav-briefcase.svg" alt="">
-                                <span class="nav-label">Portfolio</span>
+                                <img src="img/liquidity-pool.svg" alt="">
+                                <span class="nav-label">Liquidity pool</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -542,6 +542,9 @@
                                                         <button class="primary-btn sm-btn">
                                                             <img src="img/swap-white.svg" alt="">
                                                         </button>
+                                                        <button class="primary-btn sm-btn">
+                                                            <img src="img/withdraw-remove.svg" alt="">
+                                                        </button>
     
                                                         <div class="dropdown earnings-dropdown">
                                                             <button class="primary-btn dropdown-toggle" type="button"
@@ -890,7 +893,7 @@
 
     <!-- Right Slider -->
     <!-- right-nav-open open class name -->
-    <div class="right-side-nav right-nav-open">
+    <div class="right-side-nav">
         <div class="top-sec d-flex align-items-center">
             <div class="left-block d-flex align-items-center">
                 <button class="right-nav-back-btn">
