--- a/swap-page.html
+++ b/swap-page.html
@@ -517,8 +517,8 @@
                                                                         </div>
                                                                         <div class="rht-block">
                                                                             <div class="dtls">
-                                                                                <h4>PROPS</h4>
-                                                                                <p>Balance : 1,2.4242</p>
+                                                                                <h4>USDC_FA</h4>
+                                                                                <p>Balance : 1,004,956,303787</p>
                                                                             </div>
                                                                             <div class="icon-block">
                                                                                 <img src="img/logo-img-coin.svg" alt="">
@@ -539,6 +539,11 @@
                                                                     <button class="rng-btn">MAX</button>
                                                                 </div>
                                                             </div>
+
+                                                            <button class="toggle-btn">
+                                                                <img src="img/card-swap-icon.svg" alt="">
+                                                            </button>
+
                                                         </div>
                                             
                                                         <div class="liq-card liq-card-2">
@@ -554,7 +559,7 @@
                                                                         <div class="rht-block">
                                                                             <div class="dtls">
                                                                                 <h4>PROPS</h4>
-                                                                                <p>Balance : 1,2.4242</p>
+                                                                                <p>Balance : 1,004,956,303787</p>
                                                                             </div>
                                                                             <div class="icon-block">
                                                                                 <img src="img/coin-dol.svg" alt="">
@@ -594,15 +599,15 @@
                                                     <h3 class="col-title">Price</h3>
                                                     <div class="price-swap-cover d-flex justify-content-between">
                                                         <div class="price">
-                                                            1 USDC
+                                                            1 USDC_FA
                                                             <img class="icon-swp" src="img/price-swap.svg" alt="">
-                                                            415.39 PROPS
+                                                            11824.781380 PROPS
                                                         </div>
                                                         <div class="sep"></div>
                                                         <div class="price">
-                                                            1 USDC
+                                                            1 PROPS
                                                             <img class="icon-swp" src="img/price-swap.svg" alt="">
-                                                            415.39 PROPS
+                                                            11824.781380 USDC_FA
                                                         </div>
                                                     </div>
                                                     <div class="data-table-item">
