--- a/liquidity-pool-admin.html
+++ b/liquidity-pool-admin.html
@@ -765,6 +765,13 @@
                                 <button class="primary-btn"><img src="img/plus-white.svg" alt=""> Create a Pool</button>
                                 <button class="primary-btn"><img src="img/swap-white.svg" alt=""> Swap</button>
                             </div>
+                            <div class="btn-block-btm mt-2">
+                                <button class="primary-btn w-100"><img width="12px" src="img/minus-white.svg" alt=""> Remove Liquidity</button>
+                            </div>
+                            <div class="btn-block-btm mt-2">
+                                <button class="primary-btn"><img width="12px" src="img/minus-white.svg" alt=""> Remove Liquidity</button>
+                                <button class="primary-btn"><img src="img/withdraw-remove.svg" alt=""> Withdraw Fee</button>
+                            </div>
 
                         </div>
 
