--- a/about-props.html
+++ b/about-props.html
@@ -362,10 +362,13 @@
             <div class="body-content-outer body-content-outer-home">
                 
                 <div class="property-listing-cover">
-                    <div class="filter-wrapper d-flex">
-                        <div class="block-left">
-                            <div class="filter-nav-btn-wrapper d-flex">
+                    <div class="filter-wrapper home-btn-wrapper-outer d-flex">
+                        <div class="block-left w-100">
+                            <div class="filter-nav-btn-wrapper home-btn-wrapper d-flex">
                                 <button class="filter-nav-btn active">Home</button>
+                                <button class="filter-nav-btn">Portfolio</button>
+                                <button class="filter-nav-btn">Staking</button>
+                                <button class="filter-nav-btn">Transactions</button>
                                 <button class="filter-nav-btn">Portfolio</button>
                                 <button class="filter-nav-btn">Staking</button>
                                 <button class="filter-nav-btn">Transactions</button>
