--- a/liquidity-pool-admin.html
+++ b/liquidity-pool-admin.html
@@ -900,7 +900,7 @@
 
     <!-- Right Slider -->
     <!-- right-nav-open open class name -->
-    <div class="right-side-nav">
+    <div class="right-side-nav right-nav-open">
         <div class="top-sec d-flex align-items-center">
             <div class="left-block d-flex align-items-center">
                 <button class="right-nav-back-btn">
