--- a/liquidity-pool-admin-Farming.html
+++ b/liquidity-pool-admin-Farming.html
@@ -573,6 +573,12 @@
                                         PRPOS <img class="ms-2" src="img/coin-farm-props.svg" alt="">
                                     </h4>
                                 </div>
+                                <div class="card-det-sm">
+                                    <p>LP Toke Balance <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>
+                                        0.0000947
+                                    </h4>
+                                </div>
                             </div>
 
                             <div class="btn-block-btm">
@@ -607,6 +613,12 @@
                                     <p>Reward Token <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
                                     <h4>
                                         PRPOS <img class="ms-2" src="img/coin-farm-props.svg" alt="">
+                                    </h4>
+                                </div>
+                                <div class="card-det-sm">
+                                    <p>LP Toke Balance <span class="info ms-1"><img src="img/info-circle.svg" alt=""></span></p>
+                                    <h4>
+                                        0.0000947
                                     </h4>
                                 </div>
                             </div>
@@ -667,7 +679,7 @@
 
     <!-- Right Slider -->
     <!-- right-nav-open open class name -->
-    <div class="right-side-nav right-nav-open">
+    <div class="right-side-nav ">
         <div class="top-sec d-flex align-items-center">
             <div class="left-block d-flex align-items-center">
                 <button class="right-nav-back-btn">
